--- a/food.html
+++ b/food.html
@@ -18,7 +18,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;            
             Welcome Foodie's to our Food Corner..!!</h2><br/>
-            <h3> <b>Available Varieties of Food<b><u><i>(pure veg)</i></u></h3><br/>
+            <h3> <b>Available Varieties of Food...<b><u><i>(pure veg)</i></u></h3><br/>
             <img src="maha.jpg"width="300"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <img src="gujrati.jpg"width="350">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <img src="south.jpeg"width="260">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
